Fixed gaps on first section
I fixed the gaps on the first section of the home page. Now I need to do the same for the second section.

--- a/style.css
+++ b/style.css
@@ -47,14 +47,13 @@ a:link {
     height: 2px;
     width: 95%;
     display: flex;
-    margin: auto;
     justify-content: center;
     margin: 2% auto;
 }
 
 .home-section1,
 .home-section2 {
-    margin: 0;
+    margin: 2.5%;
 }
 
 
@@ -62,39 +61,29 @@ a:link {
     display: flex;
     flex-direction: row;
     width: 100%;
-    margin: 0;
-    padding-left: 2.5%;
-    padding-right: 2.5%;
 }
 
 .home-content2 {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: flex-start;
     width: 100%;
-    margin: 0;
-    padding-left: 2.5%;
-    padding-right: 2.5%;
 }
 
 .home-content2-img {
     display: flex;
     flex-direction: row;
     width: 100%;
-    margin: 0;
-    padding-left: 2.5%;
-    padding-right: 2.5%;
 }
 
 .home-content1-writing {
-    width: 55%;
+    width: 65%;
     padding-left: 5%;
 }
 
 
 .home-content2-writing {
     width: 65%;
-    margin-right: 25%;
+    margin-right: 2%;
 }
 
 .home-content2-writing p {
